--- a/backend/typeorm/4.1-articuloRutas.md
+++ b/backend/typeorm/4.1-articuloRutas.md
@@ -47,10 +47,10 @@ AppDataSource.initialize().then(async () => {
 }).catch(error => console.log(error))
 // Escribir la función aqui
 export const getArticulos = async (solicitud: Request, respuesta: Response): Promise<Response> => {
-    const repositorioArticulo = AppDataSource.getRepository(Articulo)
+    const articuloRepositorio = AppDataSource.getRepository(Articulo)
     try {
         //hacer la consulta
-        const response = await repositorioArticulo.find()
+        const response = await articuloRepositorio.find()
 
         //enviar la respuesta
         return respuesta.status(200).send(response)
@@ -92,13 +92,13 @@ export default router
 - En articulos.service.ts
 ```ts
 export const getArticuloById = async (solicitud: Request, respuesta: Response): Promise<Response> => {
-    const repositorioArticulo = AppDataSource.getRepository(Articulo)
+    const articuloRepositorio = AppDataSource.getRepository(Articulo)
     try {
         // obtener el id del articulo
         const idArticulo = parseInt(solicitud.params.id)
 
         //hacer la consulta
-        const response = await repositorioArticulo.findOneBy({ id: idArticulo })
+        const response = await articuloRepositorio.findOneBy({ id: idArticulo })
 
         //enviar la respuesta
         return respuesta.status(200).send(response)
@@ -190,13 +190,13 @@ console.log("¡Aplicación de ejemplo corriendo en el puerto " + port + "!")
 - En articulos.service.ts
 ```ts
 export const updateArticulo = async (solicitud: Request, respuesta: Response): Promise<Response> => {
-    const repositorioArticulo = AppDataSource.getRepository(Articulo)
+    const articuloRepositorio = AppDataSource.getRepository(Articulo)
     try {
         // obtener el id del articulo
         const idArticulo = parseInt(solicitud.params.id)
 
         //hacer la consulta
-        const updateArticulo = await repositorioArticulo.findOneBy({ id: idArticulo })
+        const updateArticulo = await articuloRepositorio.findOneBy({ id: idArticulo })
 
         // dto con el body
         const { descripcion, precio, stock } = solicitud.body;
@@ -256,13 +256,13 @@ console.log("¡Aplicación de ejemplo corriendo en el puerto " + port + "!")
 - En articulos.service.ts
 ```ts
 export const deleteArticulo = async (solicitud: Request, respuesta: Response): Promise<Response> => {
-    const repositorioArticulo = AppDataSource.getRepository(Articulo)
+    const articuloRepositorio = AppDataSource.getRepository(Articulo)
     try {
         // obtener el id del articulo
         const idArticulo = parseInt(solicitud.params.id)
 
         //hacer la consulta
-        const deleteArticulo = await repositorioArticulo.findOneBy({ id: idArticulo })
+        const deleteArticulo = await articuloRepositorio.findOneBy({ id: idArticulo })
 
         // hacer la consulta
         await AppDataSource.manager.remove(deleteArticulo)
