--- a/backend/typeorm/4.1-articuloRutas.md
+++ b/backend/typeorm/4.1-articuloRutas.md
@@ -5,7 +5,9 @@
 - [5. POST un nuevo articulo](#5-post-un-nuevo-articulo)
 - [6. PUT Actualizar un articulo](#6-put-actualizar-un-articulo)
 - [7. DELETE borrar articulo por id](#7-delete-borrar-articulo-por-id)
-- [8. Referencia](#8-referencia)
+- [8. Servicio final](#8-servicio-final)
+- [9. Tabla de servicios apis](#9-tabla-de-servicios-apis)
+- [10. Referencia](#10-referencia)
 ## 1. Instalando las dependecias
 - Para que reconozca express y cors de manera local
 ```console
@@ -53,7 +55,7 @@ export const getArticulos = async (solicitud: Request, respuesta: Response): Pro
         const response = await articuloRepositorio.find()
 
         //enviar la respuesta
-        return respuesta.status(200).send(response)
+        respuesta.status(200).send(response)
     } catch (error) {
         console.log(error);
         return respuesta.status(500).json('Error Interno del Servidor');
@@ -76,17 +78,22 @@ export default router
 ```
 - Llamar a las rutas desde la aplicación principal
 ```ts
-// lib/app.ts
-import { Router } from "express"
-// traer los apis
-import { getArticulos }  from "./articulos.service"
+//importar la libreria de express
+import * as express from "express"
+// importando las rutas
+import route from './articulos.controller'
+//importar cors para cabecera
+import * as cors from 'cors'
 // Crear una nueva instancia de aplicación express
-const router = Router()
-
-//trae todos los articulos
-router.get("/articulos", getArticulos)
-//manda estas rutas a main.ts
-export default router
+const app = express()
+//puerto
+const port = 3000
+//credenciales(permisos de GET,POST,PUT,etc)
+app.use(cors())
+//usando las rutas
+app.use(route)
+app.listen(port)
+console.log("¡Aplicación de ejemplo corriendo en el puerto " + port + "!")
 ```
 ## 4. GET un solo articulo por ID
 - En articulos.service.ts
@@ -101,7 +108,7 @@ export const getArticuloById = async (solicitud: Request, respuesta: Response): 
         const response = await articuloRepositorio.findOneBy({ id: idArticulo })
 
         //enviar la respuesta
-        return respuesta.status(200).send(response)
+        respuesta.status(200).send(response)
     } catch (error) {
         console.log(error);
         return respuesta.status(500).json('Error Interno del Servidor');
@@ -142,7 +149,10 @@ export const createArticulo = async (solicitud: Request, respuesta: Response): P
         await AppDataSource.manager.save(createArticuloDto)
 
         //enviar la respuesta
-        return respuesta.status(200).send(createArticuloDto)
+        respuesta.status(200).json({
+            mensaje: 'Articulo Agregado con exito',
+            datos: createArticuloDto
+        })
     } catch (error) {
         console.log(error);
         return respuesta.status(500).json('Error Interno del Servidor');
@@ -208,7 +218,10 @@ export const updateArticulo = async (solicitud: Request, respuesta: Response): P
         await AppDataSource.manager.save(updateArticulo)
 
         //enviar la respuesta
-        return respuesta.status(200).send(updateArticulo)
+        respuesta.status(200).json({
+            mensaje: 'Articulo Modificado con exito',
+            datos: updateArticulo
+        })
     } catch (error) {
         console.log(error);
         return respuesta.status(500).json('Error Interno del Servidor');
@@ -268,7 +281,7 @@ export const deleteArticulo = async (solicitud: Request, respuesta: Response): P
         await AppDataSource.manager.remove(deleteArticulo)
 
         //enviar la respuesta
-        return respuesta.status(200).send(`Artículo ${idArticulo} eliminado con éxito`)
+        respuesta.status(200).send(`Artículo ${idArticulo} eliminado con éxito`)
     } catch (error) {
         console.log(error);
         return respuesta.status(500).json('Error Interno del Servidor');
@@ -290,7 +303,127 @@ router.delete("/articulos/:id", deleteArticulo)
 //manda estas rutas a main.ts
 export default router
 ```
-## 8. Referencia
+## 8. Servicio final
+- articulos.service.ts queda
+```ts
+import { Request, Response } from 'express'
+// traer la conexion de base de datos
+import { AppDataSource } from './data-source'
+// traer la entidad
+import { Articulo } from './entities/articulo.entity'
+//Inicializar  data-source
+AppDataSource.initialize().then(async () => {
+    console.log("¡La fuente de datos se ha inicializado!")
+}).catch(error => console.log(error))
+// Escribir la función aqui
+export const getArticulos = async (solicitud: Request, respuesta: Response): Promise<Response> => {
+    const articuloRepositorio = AppDataSource.getRepository(Articulo)
+    try {
+        //hacer la consulta
+        const response = await articuloRepositorio.find()
+
+        //enviar la respuesta
+        respuesta.status(200).send(response)
+    } catch (error) {
+        console.log(error);
+        return respuesta.status(500).json('Error Interno del Servidor');
+    }
+}
+export const getArticuloById = async (solicitud: Request, respuesta: Response): Promise<Response> => {
+    const articuloRepositorio = AppDataSource.getRepository(Articulo)
+    try {
+        // obtener el id del articulo
+        const idArticulo = parseInt(solicitud.params.id)
+
+        //hacer la consulta
+        const response = await articuloRepositorio.findOneBy({ id: idArticulo })
+
+        //enviar la respuesta
+        respuesta.status(200).send(response)
+    } catch (error) {
+        console.log(error);
+        return respuesta.status(500).json('Error Interno del Servidor');
+    }
+};
+export const createArticulo = async (solicitud: Request, respuesta: Response): Promise<Response> => {
+    try {
+        // dto con el body
+        const { descripcion, precio, stock } = solicitud.body;
+        const createArticuloDto = new Articulo()
+        createArticuloDto.descripcion = descripcion
+        createArticuloDto.precio = precio
+        createArticuloDto.stock = stock
+        // hacer la consulta
+        await AppDataSource.manager.save(createArticuloDto)
+
+        //enviar la respuesta
+        respuesta.status(200).json({
+            mensaje: 'Articulo Agregado con exito',
+            datos: createArticuloDto
+        })
+    } catch (error) {
+        console.log(error);
+        return respuesta.status(500).json('Error Interno del Servidor');
+    }
+};
+export const updateArticulo = async (solicitud: Request, respuesta: Response): Promise<Response> => {
+    const articuloRepositorio = AppDataSource.getRepository(Articulo)
+    try {
+        // obtener el id del articulo
+        const idArticulo = parseInt(solicitud.params.id)
+
+        //hacer la consulta
+        const updateArticulo = await articuloRepositorio.findOneBy({ id: idArticulo })
+
+        // dto con el body
+        const { descripcion, precio, stock } = solicitud.body;
+
+        updateArticulo.descripcion = descripcion
+        updateArticulo.precio = precio
+        updateArticulo.stock = stock
+        // hacer la consulta
+        await AppDataSource.manager.save(updateArticulo)
+
+        //enviar la respuesta
+        respuesta.status(200).json({
+            mensaje: 'Articulo Modificado con exito',
+            datos: updateArticulo
+        })
+    } catch (error) {
+        console.log(error);
+        return respuesta.status(500).json('Error Interno del Servidor');
+    }
+};
+export const deleteArticulo = async (solicitud: Request, respuesta: Response): Promise<Response> => {
+    const articuloRepositorio = AppDataSource.getRepository(Articulo)
+    try {
+        // obtener el id del articulo
+        const idArticulo = parseInt(solicitud.params.id)
+
+        //hacer la consulta
+        const deleteArticulo = await articuloRepositorio.findOneBy({ id: idArticulo })
+
+        // hacer la consulta
+        await AppDataSource.manager.remove(deleteArticulo)
+
+        //enviar la respuesta
+        respuesta.status(200).send(`Artículo ${idArticulo} eliminado con éxito`)
+    } catch (error) {
+        console.log(error);
+        return respuesta.status(500).json('Error Interno del Servidor');
+    }
+};
+```
+## 9. Tabla de servicios apis
+Creación de rutas para operaciones CRUD
+| Método | Función | Equivalente | Body |
+| --------- | --------- | --------- | --------- |
+| GET: /articulos | getArticulos() | http://localhost:3000/articulos | no tiene |
+| GET: /articulos/id | getArticuloById(id: number) | http://localhost:3000/articulos/1 | no tiene |
+| POST: /articulos/ | createArticulo(createArticuloDto: { descripcion, precio, stock }) | http://localhost:3000/articulos/ | { "descripcion": "Pepsi", "precio": 113, "stock": 37 } |
+| PUT: /articulos/id | updateArticulo(id: number, updateArticuloDto: { descripcion, precio, stock }) | http://localhost:3000/articulos/7 | { "descripcion": "PepsiCola", "precio": 10, "stock": 20 } |
+| DELETE: /articulos/id | deleteArticulo(id: number) | http://localhost:3000/articulos/1 | no tiene |
+## 10. Referencia
 - [Example using TypeORM with Express](https://orkhan.gitbook.io/typeorm/docs/example-with-express)
 - [typeorm-repositorio](https://github.com/xixay/typeorm-repositorio)
 - [Example using TypeORM with Express](https://orkhan.gitbook.io/typeorm/docs/example-with-express)
