--- a/3frontend/primereact/1.1alineaciones.md
+++ b/3frontend/primereact/1.1alineaciones.md
@@ -5,3 +5,9 @@
     <AccionGroup/>
 </div>
 ```
+### Alineacion vertical
+```jsx
+<div className="flex align-content-center">
+    <AccionGroup/>
+</div>
+```
