Actualizar scripts de DBeaver

--- a/2backend/nestJs/1.1-articuloRutas.md
+++ b/2backend/nestJs/1.1-articuloRutas.md
@@ -1,3 +1,4 @@
+[<< INDICE](../../README.md)
 - [1. Usar cors en la aplicación principal](#1-usar-cors-en-la-aplicación-principal)
 - [2. Agregar la entidad(es)](#2-agregar-la-entidades)
 - [3. Agregar el constructor](#3-agregar-el-constructor)
@@ -351,3 +352,5 @@ Creación de rutas para operaciones CRUD
 ## 11. Referencia
 - [NestJsOtro-Repositorio](https://github.com/xixay/NestJsOtro-Repositorio/blob/base_datos/base.md)
 - [NestJS + PostgreSQL + TypeORM](https://www.youtube.com/watch?v=2HfGdpr4PPg)
+
+[<< INDICE](../../README.md)
