--- a/2backend/nestJs/1.10-decoradores.md
+++ b/2backend/nestJs/1.10-decoradores.md
@@ -1,3 +1,4 @@
+[<< INDICE](../../README.md)
 ## Instalar
 ```console
 npm i -D --save class-validator class-transformer
@@ -122,3 +123,5 @@ npm i -D --save class-validator class-transformer
 | `@IsInstance(value: any)`                              | Comprueba si la propiedad es una instancia del valor pasado.                                                                           |
 | **Otros decoradores**                                   |                                                                                                                                                                                                       |
 | `@Allow()`                                             | Evita eliminar la propiedad cuando no se especifica ninguna otra restricción.                                                                 |
+
+[<< INDICE](../../README.md)
