--- a/2backend/nestJs/1.2-Env.md
+++ b/2backend/nestJs/1.2-Env.md
@@ -1,3 +1,4 @@
+[<< INDICE](../../README.md)
 - [1. Instalar localmente](#1-instalar-localmente)
 - [2. crear el archivo .env](#2-crear-el-archivo-env)
 - [3. Colocar las variables donde se necesite](#3-colocar-las-variables-donde-se-necesite)
@@ -97,3 +98,5 @@ DB_PORT=5432//puede estar
 ```
 # 6. Referencias
 - [Variable de entorno](https://www.npmjs.com/package/dotenv)
+
+[<< INDICE](../../README.md)
