--- a/2backend/nestJs/1.3.1-relacion_1_a_N.md
+++ b/2backend/nestJs/1.3.1-relacion_1_a_N.md
@@ -1,3 +1,4 @@
+[<< INDICE](../../README.md)
 - [1. Crear las entidades perfile y fotos](#1-crear-las-entidades-perfile-y-fotos)
 - [2. Agregar las entidades donde esta la conexion de la base de datos](#2-agregar-las-entidades-donde-esta-la-conexion-de-la-base-de-datos)
 - [3. Para manipular las entidad perfile](#3-para-manipular-las-entidad-perfile)
@@ -324,3 +325,5 @@ export class FotosService {
 # 12. Referencia
 - [Relación 1 a 1](https://www.youtube.com/watch?v=s5qQf8ifj6I)
 - [Relación 1 a N](https://www.youtube.com/watch?v=tEf-ch1OknA)
+
+[<< INDICE](../../README.md)
