--- a/2backend/nestJs/1.6-seeders.md
+++ b/2backend/nestJs/1.6-seeders.md
@@ -1,4 +1,5 @@
-# Realizado de seeders proyecto base AGETIC nestjs
+[<< INDICE](../../README.md)
+## Realizado de seeders proyecto base AGETIC nestjs
 - Ir a  a la ubicación database/seeds/
 - Crear el archivo 1611498173796-openvox.ts (debe tener un nuemro de codigo diferente a los otros)
 ```ts
@@ -77,3 +78,5 @@ export class openvox1611498173796 implements MigrationInterface {
 El nombre de la clase (openvox1611498173796), debe ser similar al nombre del archivo(1611498173796-openvox.ts)
 ```
 - Ejecutar npm run setup
+
+[<< INDICE](../../README.md)
