--- a/2backend/nestJs/1.7-generarCrudsoloSispoa.md
+++ b/2backend/nestJs/1.7-generarCrudsoloSispoa.md
@@ -1,3 +1,5 @@
+[<< INDICE](../../README.md)
+
 ## Generar Crud
 - Estando en el esquema parametricas
 ```console
@@ -13,3 +15,5 @@ estados.est_codigo = 1;
 objetivosEstrategicos2.oes_estado = estados;//por ser objeto
 ```
 - Ó Colocar Por defecto value =1(en la base de datos)
+
+[<< INDICE](../../README.md)
