--- a/2backend/nestJs/1.8-consultaSqlBackend.md
+++ b/2backend/nestJs/1.8-consultaSqlBackend.md
@@ -1,5 +1,19 @@
-# Metodo para obtener la lista por aun_codigo_supervisor
-## Dbeaver ejm1
+[<< INDICE](../../README.md)
+- [1. Metodo para obtener la lista por aun\_codigo\_supervisor](#1-metodo-para-obtener-la-lista-por-aun_codigo_supervisor)
+  - [1.1. Dbeaver ejm1](#11-dbeaver-ejm1)
+  - [1.2. Backend ejm1](#12-backend-ejm1)
+- [2. Validar que los items no se repitan al momento de editar](#2-validar-que-los-items-no-se-repitan-al-momento-de-editar)
+  - [2.1. Dbeaver ejm2](#21-dbeaver-ejm2)
+  - [2.2. Backend ejm2](#22-backend-ejm2)
+- [3. Consultas](#3-consultas)
+  - [3.1. OBTENER CARGOS ITE solo de 1 y 2](#31-obtener-cargos-ite-solo-de-1-y-2)
+  - [3.2. OBTENER LOS CARGOS ITEMS DE ESOS CODIGOS](#32-obtener-los-cargos-items-de-esos-codigos)
+  - [3.3. OBTENER NIVELES AREAS UNIDADES](#33-obtener-niveles-areas-unidades)
+  - [3.4. OBTENER AREAS UNIDADES CON SU RESPECTIVA DIRECTIVA usando WHERE(mas pesado menos recomendado)](#34-obtener-areas-unidades-con-su-respectiva-directiva-usando-wheremas-pesado-menos-recomendado)
+  - [3.5. OBTENER AREAS UNIDADES CON SU RESPECTIVA DIRECTIVA usando LEFT JOIN](#35-obtener-areas-unidades-con-su-respectiva-directiva-usando-left-join)
+
+# 1. Metodo para obtener la lista por aun_codigo_supervisor
+## 1.1. Dbeaver ejm1
 - En DBEAVER el codigo del metodo findAll(), es equivalente hacer:
 ```sql
 SELECT 
@@ -38,7 +52,7 @@ WHERE e.est_codigo = t.afu_estado and t.aun_codigo_supervisado=64 ;
 |----------|----------------------|---------------------|---------------|----------|---------|----------------------|
 |222|64|60|desc 1|1|#54bebe|EDICIÓN|
 |221|64|61|desc 2|1|#54bebe|EDICIÓN|
-## Backend ejm1
+## 1.2. Backend ejm1
 - El método
 ```ts
   @LoggerMethod
@@ -103,8 +117,8 @@ http://localhost:7000/autoridades-funcionales?aun_codigo_supervisado=(64)
   ]
 }
 ```
-# Validar que los items no se repitan al momento de editar
-## Dbeaver ejm2
+# 2. Validar que los items no se repitan al momento de editar
+## 2.1. Dbeaver ejm2
 - Encontrar las areas unidades, pertenecientes a ese organigrama
 ```sql
 select * 
@@ -134,7 +148,7 @@ where ci.ite_codigo IN (134) AND ci.aun_codigo IN (181,182) and ci.cit_estado in
 |cit_codigo|cit_descripcion|car_codigo|ite_codigo|cit_estado|usuario_registro|usuario_modificacion|usuario_baja|fecha_registro|fecha_modificacion|fecha_baja|aun_codigo|
 |----------|---------------|----------|----------|----------|----------------|--------------------|------------|--------------|------------------|----------|----------|
 |186|desc 5|68|134|1|1791|0|0|2023-04-24 09:20:08.205|1900-01-01 00:00:00.000|1900-01-01 00:00:00.000|181|
-## Backend ejm2
+## 2.2. Backend ejm2
 - Metodo que verifica que el item, no se repita al modificarse, al momento de actualizarse
 ```ts
   @LoggerMethod
@@ -193,8 +207,8 @@ http://localhost:7000/cargos-items
 |cit_codigo|cit_descripcion|car_codigo|ite_codigo|cit_estado|usuario_registro|usuario_modificacion|usuario_baja|fecha_registro|fecha_modificacion|fecha_baja|aun_codigo|
 |----------|---------------|----------|----------|----------|----------------|--------------------|------------|--------------|------------------|----------|----------|
 |186|desc 6|68|134|1|1791|0|0|2023-04-24 09:20:08.205|1900-01-01 00:00:00.000|1900-01-01 00:00:00.000|181|
-# Consultas
-## OBTENER CARGOS ITE solo de 1 y 2
+# 3. Consultas
+## 3.1. OBTENER CARGOS ITE solo de 1 y 2
 ```sql
 select 
 ci.cit_codigo,
@@ -203,7 +217,7 @@ from estructura_organizacional.cargos_items ci
 left join estructura_organizacional.cargos_item_dependencias cid on cid.cit_codigo_hijo =ci.cit_codigo 
 where cit_codigo in (1,2);
 ```
-## OBTENER LOS CARGOS ITEMS DE ESOS CODIGOS
+## 3.2. OBTENER LOS CARGOS ITEMS DE ESOS CODIGOS
 ```sql
 select *
 from estructura_organizacional.cargos_items ci 
@@ -213,7 +227,7 @@ where ci.cit_codigo in (48,49)
 |----------|---------------|----------|----------|----------|----------------|--------------------|------------|--------------|------------------|----------|----------|
 |48|desc 7|57|47|1|1791|1791|0|2023-04-05 11:10:06.509|2023-04-05 11:18:34.266|1900-01-01 00:00:00.000|61|
 |49|desc 8|58|48|1|1791|1791|0|2023-04-05 11:12:33.909|2023-04-05 11:22:05.908|1900-01-01 00:00:00.000|60|
-## OBTENER NIVELES AREAS UNIDADES
+## 3.3. OBTENER NIVELES AREAS UNIDADES
 ```sql
 select *
 from parametricas.niveles_areas_unidades nau
@@ -225,7 +239,7 @@ asc;
 |1|DIRECTIVO|Definición para áreas Directivas|1|0|0|0|2023-03-16 16:13:33.930|1900-01-01 00:00:00.000|1900-01-01 00:00:00.000|1|
 |2|EJECUTIVO|Definición para Áreas/Unidades Ejecutivas|1|0|0|0|2023-03-16 16:13:33.930|1900-01-01 00:00:00.000|1900-01-01 00:00:00.000|2|
 |3|OPERATIVO|Definición para Áreas/Unidades Operativas|1|0|0|0|2023-03-16 16:13:33.930|1900-01-01 00:00:00.000|1900-01-01 00:00:00.000|3|
-## OBTENER AREAS UNIDADES CON SU RESPECTIVA DIRECTIVA usando WHERE(mas pesado menos recomendado)
+## 3.4. OBTENER AREAS UNIDADES CON SU RESPECTIVA DIRECTIVA usando WHERE(mas pesado menos recomendado)
 ```sql
 select 
 au.aun_codigo,
@@ -241,7 +255,7 @@ order by au.aun_codigo;
 |1|Despacho Contralor|2|EJECUTIVO|
 |2|Gerencia Recursos Humanos|2|EJECUTIVO|
 |3|Gerencia Nacional Administrativa financiera|2|EJECUTIVO|
-## OBTENER AREAS UNIDADES CON SU RESPECTIVA DIRECTIVA usando LEFT JOIN
+## 3.5. OBTENER AREAS UNIDADES CON SU RESPECTIVA DIRECTIVA usando LEFT JOIN
 ```sql
 select 
 au.aun_codigo,
@@ -258,3 +272,4 @@ order by au.aun_codigo;
 |2|Gerencia Recursos Humanos|2|EJECUTIVO|
 |3|Gerencia Nacional Administrativa financiera|2|EJECUTIVO|
 
+[<< INDICE](../../README.md)
