--- a/2backend/nestJs/1.9-entidad.md
+++ b/2backend/nestJs/1.9-entidad.md
@@ -1,5 +1,11 @@
-# ENTIDAD
-## DIMENSION
+[<< INDICE](../../README.md)
+- [1. ENTIDAD](#1-entidad)
+  - [1.1. DIMENSION](#11-dimension)
+  - [1.2. OBJETIVOS ESTRATEGICOS2](#12-objetivos-estrategicos2)
+  - [1.3. ESTADOS](#13-estados)
+
+# 1. ENTIDAD
+## 1.1. DIMENSION
 - La entidad dimension
 ```ts
 import {
@@ -69,7 +75,7 @@ export class Dimensiones {
   objetivos_estrategicos: ObjetivosEstrategicos2[];
 }
 ```
-## OBJETIVOS ESTRATEGICOS2
+## 1.2. OBJETIVOS ESTRATEGICOS2
 - La entidad objetivos estrategicos2
 ```ts
 import {
@@ -141,7 +147,7 @@ export class ObjetivosEstrategicos2 {
   oes_estado: Estados;
 }
 ```
-## ESTADOS
+## 1.3. ESTADOS
 - Entidad Estados
 ```ts
 import { Column, Entity, Index, OneToMany } from "typeorm";
@@ -201,3 +207,5 @@ export class Estados {
 
 }
 ```
+
+[<< INDICE](../../README.md)
