--- a/2backend/typeorm/3.1-articuloRutasBuilder.md
+++ b/2backend/typeorm/3.1-articuloRutasBuilder.md
@@ -1,3 +1,4 @@
+[<< INDICE](../../README.md)
 - [1. Creación de rutas para operaciones CRUD](#1-creación-de-rutas-para-operaciones-crud)
 - [2. GET todos los articulos](#2-get-todos-los-articulos)
 - [3. GET un solo articulo por ID](#3-get-un-solo-articulo-por-id)
@@ -141,3 +142,5 @@ app.delete("/articulos/:id", async (solicitud: express.Request, respuesta: expre
       respuesta.send('El articulo se a eliminado de la base de datos ')
     })
 ```
+
+[<< INDICE](../../README.md)
