--- a/2backend/typeorm/4.1-articuloRutas.md
+++ b/2backend/typeorm/4.1-articuloRutas.md
@@ -1,3 +1,4 @@
+[<< INDICE](../../README.md)
 - [1. Instalando las dependecias](#1-instalando-las-dependecias)
 - [2. Usar express y cors en la aplicación principal](#2-usar-express-y-cors-en-la-aplicación-principal)
 - [3. GET todos los articulos](#3-get-todos-los-articulos)
@@ -427,3 +428,5 @@ Creación de rutas para operaciones CRUD
 - [Example using TypeORM with Express](https://orkhan.gitbook.io/typeorm/docs/example-with-express)
 - [typeorm-repositorio](https://github.com/xixay/typeorm-repositorio)
 - [Example using TypeORM with Express](https://orkhan.gitbook.io/typeorm/docs/example-with-express)
+
+[<< INDICE](../../README.md)
