--- a/3frontend/primereact/1.1alineaciones.md
+++ b/3frontend/primereact/1.1alineaciones.md
@@ -1,3 +1,4 @@
+[<< INDICE](../../README.md)
 ## Alineaciones
 ### Alineacion horizontal
 ```jsx
@@ -11,3 +12,4 @@
     <AccionGroup/>
 </div>
 ```
+[<< INDICE](../../README.md)
