--- a/3frontend/primereact/1.3estilos.md
+++ b/3frontend/primereact/1.3estilos.md
@@ -1,3 +1,4 @@
+[<< INDICE](../../README.md)
 ## Estilos
 - Para agregar estilos, por ejemplo el fondo gris al fondo, y en el card un fondo verde amarillo
 ```jsx
