--- a/3frontend/primereact/1.4-visibilidad.md
+++ b/3frontend/primereact/1.4-visibilidad.md
@@ -1,4 +1,5 @@
-### Ocultar o mostrar
+[<< INDICE](../../README.md)
+## Ocultar o mostrar
 - Se usa la variable showObservacion
 ```jsx
   const [observacion, setObservacion] = useState('');
