--- a/3frontend/primereact/1.5-select.md
+++ b/3frontend/primereact/1.5-select.md
@@ -1,3 +1,4 @@
+[<< INDICE](../../README.md)
 ## Autocomplete
 - Importar el componente select
 ```jsx
@@ -40,4 +41,4 @@ import { Dropdown } from 'primereact/dropdown';
   };
 ```
 
-	
+[<< INDICE](../../README.md)	
