--- a/3frontend/vuetify/1.2-componente.md
+++ b/3frontend/vuetify/1.2-componente.md
@@ -1,3 +1,4 @@
+[<< INDICE](../../README.md)
 ## Aplicacion principal Articulo.vue
 ```vue
 <template>
@@ -56,3 +57,5 @@ articulos: [],//el array que viene del metodo GET
 </script>
 <style></style>
 ```
+
+[<< INDICE](../../README.md)
