--- a/3frontend/vuetify/1.5-estilos como variables.md
+++ b/3frontend/vuetify/1.5-estilos como variables.md
@@ -1,4 +1,4 @@
-
+[<< INDICE](../../README.md)
 ## Usando dentro de estilos variables
 ```vue
     <v-row v-if="compruebaEstadoOrg" class="mt-2" style="text-align: center;">
@@ -13,3 +13,5 @@
  <span :class="`${(item.aun_estado==0)?'red--text':''}`">{{ item.aun_sigla }} - {{ item.aun_nombre }}</span>
 </td>
 ```
+
+[<< INDICE](../../README.md)
