--- a/3frontend/vuetify/1.8-emitYOn.md
+++ b/3frontend/vuetify/1.8-emitYOn.md
@@ -1,4 +1,4 @@
-
+[<< INDICE](../../README.md)
 ## emit y on
 - Con on, este recibe la información, pero debe estar en el mountend(), no en created
 ```vue
@@ -39,4 +39,4 @@
     },
 </script>
 ```
-s
+[<< INDICE](../../README.md)
