--- a/3frontend/reactMui/1.1-componente.md
+++ b/3frontend/reactMui/1.1-componente.md
@@ -1,6 +1,12 @@
-## Componente
+[<< INDICE](../../README.md)
+- [1. Componente](#1-componente)
+  - [1.1. Hero.tsx](#11-herotsx)
+  - [1.2. index.ts](#12-indexts)
+  - [1.3. page.tsx](#13-pagetsx)
+
+## 1. Componente
 - Crear la carpeta componente con 2 archivos: index.ts, Hero.tsx
-### Hero.tsx
+### 1.1. Hero.tsx
 ```tsx
 import React from 'react'
 const Hero = () => {
@@ -10,7 +16,7 @@ const Hero = () => {
 }
 export default Hero
 ```
-### index.ts
+### 1.2. index.ts
 ```ts
 import Hero from './Hero';
 export {
@@ -18,7 +24,7 @@ export {
 }
 ```
 - Llamarlo desde la aplicación principal
-### page.tsx
+### 1.3. page.tsx
 ```tsx
 
 import { Hero } from '@/components'
@@ -32,3 +38,5 @@ export default function Home() {
 }
 
 ```
+
+[<< INDICE](../../README.md)
