--- a/3frontend/vuetify/1.3.-lienzo.md
+++ b/3frontend/vuetify/1.3.-lienzo.md
@@ -1,3 +1,5 @@
+[<< INDICE](../../README.md)
+
 ## Lienzo
 
 ```vue
@@ -27,3 +29,5 @@
   <template></template>
 </template>
 ```
+
+[<< INDICE](../../README.md)
