--- a/3frontend/primereact/1.5-select.md
+++ b/3frontend/primereact/1.5-select.md
@@ -40,5 +40,23 @@ import { Dropdown } from 'primereact/dropdown';
     // getAllActividades(item.value);
   };
 ```
-
+- Si se quiere traer un dato por defecto, y el dropdown tiene el formato:
+```jsx
+    <DropdownController
+      name='ent_codigo'
+      control={control}
+      rules={rules.required()}
+      label='Entidades*'
+      options={entidades}
+      optionLabel='ent_descripcion'
+      optionValue='ent_codigo'
+      showClear={false}
+    />
+```
+- Setear el valor en el initform
+```jsx
+ useEffect(() => {
+    setValue('ent_codigo',1)
+  }, []);
+```
 [<< INDICE](../../README.md)	
